--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"></head><body> <h1> len0w0's website </h1>
 	
 		<title>Len0w0coder's site</title>
-		<link type="text/css" rel="stylesheet" href="len0w0.github.io/Files/styles.css">
+		<link type="text/css" rel="stylesheet" href="Files/styles.css">
 		<meta charset="utf-8">
 	
 	
@@ -11,7 +11,7 @@
 	    
 	  </header>
 	  <main>
-	    <img src="len0w0.github.io/Files/barn-owl.jpg" alt="A barn owl" width="200"> <img src="len0w0.github.io/Files/download.jpeg" alt="Minecraft" width="200px">
+	    <img src="Files/barn-owl.jpg" alt="A barn owl" width="200"> <img src="Files/download.jpeg" alt="Minecraft" width="200px">
 	    <h2>Hello!</h2>
 	    
 	   <p>
